--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -43,7 +43,7 @@ permalinks:
   publication_types: '/publication-type/:slug/'
 disableAliases: true
 outputs:
-  home: [HTML, RSS, JSON, headers, redirects]
+  home: [HTML, RSS, JSON]
   section: [HTML, RSS]
 imaging:
   resampleFilter: lanczos
