--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
   publish = "public"
 
 [build.environment]
-  HUGO_VERSION = ""
+  HUGO_VERSION = "0.104.2"
   HUGO_ENABLEGITINFO = "true"
 
 [context.production.environment]
