--- a/config.yaml
+++ b/config.yaml
@@ -7,6 +7,29 @@ paginate: 10
 googleAnalytics: G-B24KF36Q4L
 enableRobotsTXT: true
 
+module:
+  imports:
+    - path: github.com/Watts-Lab/LivingJournal-Tools/data_vis
+
+markup:
+  highlight:
+    anchorLineNos: false
+    codeFences: true
+    guessSyntax: false
+    hl_Lines: ""
+    hl_inline: false
+    lineAnchors: ""
+    lineNoStart: 1
+    lineNos: false
+    lineNumbersInTable: true
+    noClasses: true
+    noHl: false
+    style: catppuccin-mocha
+    tabwidth: 4
+  goldmark:
+    renderer:
+      unsafe: true
+
 menu:
   main:
     - identifier: posts
